
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32 ;
typedef int BOOL ;


 int False ;
 int RDP_INPUT_SCANCODE ;
 int RDP_KEYPRESS ;
 int RDP_KEYRELEASE ;
 int SCANCODE_CHAR_ESC ;
 int SCANCODE_CHAR_LCTRL ;
 int SCANCODE_EXTENDED ;
 int True ;
 int rdp_send_input (int,int ,int ,int,int ) ;
 int rdp_send_scancode (int,int ,int) ;

BOOL
handle_special_keys(uint32 keysym, unsigned int state, uint32 ev_time, BOOL pressed)
{
 switch (keysym)
 {


  case 135:

   if (pressed)
   {
    rdp_send_scancode(ev_time, RDP_KEYPRESS,
        (SCANCODE_EXTENDED | 0x46));
    rdp_send_scancode(ev_time, RDP_KEYPRESS,
        (SCANCODE_EXTENDED | 0xc6));
   }

   return True;

  case 130:
   if (pressed)
   {
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0xe1, 0);
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0x1d, 0);
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0x45, 0);
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0xe1, 0);
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0x9d, 0);
    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYPRESS, 0xc5, 0);
   }
   else
   {

    rdp_send_input(ev_time, RDP_INPUT_SCANCODE, RDP_KEYRELEASE,
            0x1d, 0);
   }
   return True;

  case 132:
  case 129:
  case 134:
  case 131:
  case 128:
  case 133:
   if (pressed)
   {
    rdp_send_scancode(ev_time, RDP_KEYPRESS, SCANCODE_CHAR_LCTRL);
    rdp_send_scancode(ev_time, RDP_KEYPRESS, SCANCODE_CHAR_ESC);
   }
   else
   {
    rdp_send_scancode(ev_time, RDP_KEYRELEASE, SCANCODE_CHAR_ESC);
    rdp_send_scancode(ev_time, RDP_KEYRELEASE, SCANCODE_CHAR_LCTRL);
   }
   return True;
 }
 return False;
}
